# target-encoding-rs

./: Cargo.toml  LICENSE
src/: lib.rs  not_windows.rs  windows.rs
