[package]
name = "target-encoding"
version = "0.2.0"
edition = "2021"
description = "Decode and encode byte iterators depending on your target os"
license = "MIT"
keywords = ["parser", "windows", "terminal", "file", "io"]
categories = ["api-bindings", "encoding", "filesystem", "parser-implementations"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnls", "stringapiset"] }

[dependencies]
utf8-decode = "1.0.1"
